More Spacing Fixes and Begin Jobs

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1772,6 +1772,9 @@ pre code {
 .col-xs-offset-1 {
   margin-left: 8.33333333%;
 }
+.col-xs-offset-1-5 {
+	margin-left: 8.33%
+}
 .col-xs-offset-0 {
   margin-left: 0;
 }
